--- a/ex3/rockcraft.yaml
+++ b/ex3/rockcraft.yaml
@@ -11,7 +11,8 @@ platforms:
 parts:
     numpy:
         plugin: nil
-        source: chisel-releases
-        source-type: local
+        source: https://github.com/zhijie-yang/chisel-releases
+        source-type: git
+        source-tag: numpy-24.04
         override-build: |
             chisel cut --release ./ --root ${CRAFT_PART_INSTALL} python3-numpy_bins
