fix: add base-files to bare-based numpy

--- a/solutions/ex1.2/rockcraft.yaml
+++ b/solutions/ex1.2/rockcraft.yaml
@@ -12,6 +12,7 @@ parts:
     numpy:
         plugin: nil
         stage-packages:
+            - base-files
             - python3-numpy
         override-build: |
             craftctl default
